recursion.lessons.recursion.tree.Tree.scala.error
Tree:12: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
tree(steps,shrink*length,shrink)
    ^